Updating figures and descriptive stats

--- a/Output/parental_care_adjusted_strat.html
+++ b/Output/parental_care_adjusted_strat.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="xirneftrzw" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#xirneftrzw table {
+<div id="lbzqpowtno" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#lbzqpowtno table {
   font-family: Arial, system-ui, 'Segoe UI', Roboto, Helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#xirneftrzw thead, #xirneftrzw tbody, #xirneftrzw tfoot, #xirneftrzw tr, #xirneftrzw td, #xirneftrzw th {
+#lbzqpowtno thead, #lbzqpowtno tbody, #lbzqpowtno tfoot, #lbzqpowtno tr, #lbzqpowtno td, #lbzqpowtno th {
   border-style: none;
 }
 
-#xirneftrzw p {
+#lbzqpowtno p {
   margin: 0;
   padding: 0;
 }
 
-#xirneftrzw .gt_table {
+#lbzqpowtno .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_caption {
+#lbzqpowtno .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#xirneftrzw .gt_title {
+#lbzqpowtno .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#xirneftrzw .gt_subtitle {
+#lbzqpowtno .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#xirneftrzw .gt_heading {
+#lbzqpowtno .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_bottom_border {
+#lbzqpowtno .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_col_headings {
+#lbzqpowtno .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_col_heading {
+#lbzqpowtno .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#xirneftrzw .gt_column_spanner_outer {
+#lbzqpowtno .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#xirneftrzw .gt_column_spanner_outer:first-child {
+#lbzqpowtno .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#xirneftrzw .gt_column_spanner_outer:last-child {
+#lbzqpowtno .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#xirneftrzw .gt_column_spanner {
+#lbzqpowtno .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#xirneftrzw .gt_spanner_row {
+#lbzqpowtno .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#xirneftrzw .gt_group_heading {
+#lbzqpowtno .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#xirneftrzw .gt_empty_group_heading {
+#lbzqpowtno .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#xirneftrzw .gt_from_md > :first-child {
+#lbzqpowtno .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#xirneftrzw .gt_from_md > :last-child {
+#lbzqpowtno .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#xirneftrzw .gt_row {
+#lbzqpowtno .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#xirneftrzw .gt_stub {
+#lbzqpowtno .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#xirneftrzw .gt_stub_row_group {
+#lbzqpowtno .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#xirneftrzw .gt_row_group_first td {
+#lbzqpowtno .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#xirneftrzw .gt_row_group_first th {
+#lbzqpowtno .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#xirneftrzw .gt_summary_row {
+#lbzqpowtno .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#xirneftrzw .gt_first_summary_row {
+#lbzqpowtno .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_first_summary_row.thick {
+#lbzqpowtno .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#xirneftrzw .gt_last_summary_row {
+#lbzqpowtno .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_grand_summary_row {
+#lbzqpowtno .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#xirneftrzw .gt_first_grand_summary_row {
+#lbzqpowtno .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_last_grand_summary_row_top {
+#lbzqpowtno .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_striped {
+#lbzqpowtno .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#xirneftrzw .gt_table_body {
+#lbzqpowtno .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_footnotes {
+#lbzqpowtno .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_footnote {
+#lbzqpowtno .gt_footnote {
   margin: 0px;
   font-size: 10px;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#xirneftrzw .gt_sourcenotes {
+#lbzqpowtno .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#xirneftrzw .gt_sourcenote {
+#lbzqpowtno .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,79 +387,79 @@
   padding-right: 5px;
 }
 
-#xirneftrzw .gt_left {
+#lbzqpowtno .gt_left {
   text-align: left;
 }
 
-#xirneftrzw .gt_center {
+#lbzqpowtno .gt_center {
   text-align: center;
 }
 
-#xirneftrzw .gt_right {
+#lbzqpowtno .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#xirneftrzw .gt_font_normal {
+#lbzqpowtno .gt_font_normal {
   font-weight: normal;
 }
 
-#xirneftrzw .gt_font_bold {
+#lbzqpowtno .gt_font_bold {
   font-weight: bold;
 }
 
-#xirneftrzw .gt_font_italic {
+#lbzqpowtno .gt_font_italic {
   font-style: italic;
 }
 
-#xirneftrzw .gt_super {
+#lbzqpowtno .gt_super {
   font-size: 65%;
 }
 
-#xirneftrzw .gt_footnote_marks {
+#lbzqpowtno .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#xirneftrzw .gt_asterisk {
+#lbzqpowtno .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#xirneftrzw .gt_indent_1 {
+#lbzqpowtno .gt_indent_1 {
   text-indent: 5px;
 }
 
-#xirneftrzw .gt_indent_2 {
+#lbzqpowtno .gt_indent_2 {
   text-indent: 10px;
 }
 
-#xirneftrzw .gt_indent_3 {
+#lbzqpowtno .gt_indent_3 {
   text-indent: 15px;
 }
 
-#xirneftrzw .gt_indent_4 {
+#lbzqpowtno .gt_indent_4 {
   text-indent: 20px;
 }
 
-#xirneftrzw .gt_indent_5 {
+#lbzqpowtno .gt_indent_5 {
   text-indent: 25px;
 }
 
-#xirneftrzw .katex-display {
+#lbzqpowtno .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#xirneftrzw div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#lbzqpowtno div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
   <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
   <thead>
     <tr class="gt_heading">
-      <td colspan="7" class="gt_heading gt_title gt_font_normal gt_bottom_border" style><span class='gt_from_md'><strong>Supplemental Table 4.</strong> Associations of nestling mass and temperature, assessed in separate models stratified by levels of parental feeding, when influential outliers are included in the dataset.</span></td>
+      <td colspan="7" class="gt_heading gt_title gt_font_normal gt_bottom_border" style><span class='gt_from_md'><strong>Supplemental Table 5.</strong> Associations of nestling mass and temperature, assessed in separate models stratified by levels of parental feeding, when influential outliers are included in the dataset. Temperature variability is defined as the interquartile range.</span></td>
     </tr>
     
     <tr class="gt_col_headings gt_spanner_row">
@@ -519,22 +519,22 @@
 <td headers="**Effect of maximum temperature** stub_1_4 high_n" class="gt_row gt_right">35</td>
 <td headers="**Effect of maximum temperature** stub_1_4 high_b" class="gt_row gt_right">0.01 (-0.91, 0.92)</td></tr>
     <tr class="gt_group_heading_row">
-      <th colspan="7" class="gt_group_heading" scope="colgroup" id="&lt;span class='gt_from_md'&gt;&lt;strong&gt;Effect of temperature IQR&lt;/strong&gt;&lt;/span&gt;"><span class='gt_from_md'><strong>Effect of temperature IQR</strong></span></th>
+      <th colspan="7" class="gt_group_heading" scope="colgroup" id="&lt;span class='gt_from_md'&gt;&lt;strong&gt;Effect of temperature variability&lt;/strong&gt;&lt;/span&gt;"><span class='gt_from_md'><strong>Effect of temperature variability</strong></span></th>
     </tr>
     <tr class="gt_row_group_first"><th id="stub_1_5" scope="row" class="gt_row gt_left gt_stub">Unadjusted</th>
-<td headers="**Effect of temperature IQR** stub_1_5 low_n" class="gt_row gt_right">35</td>
-<td headers="**Effect of temperature IQR** stub_1_5 low_b" class="gt_row gt_right">-1.11 (-2.05, -0.13)</td>
-<td headers="**Effect of temperature IQR** stub_1_5 med_n" class="gt_row gt_right">36</td>
-<td headers="**Effect of temperature IQR** stub_1_5 med_b" class="gt_row gt_right">-2.06 (-2.97, -1.15)</td>
-<td headers="**Effect of temperature IQR** stub_1_5 high_n" class="gt_row gt_right">35</td>
-<td headers="**Effect of temperature IQR** stub_1_5 high_b" class="gt_row gt_right">0.08 (-0.7, 0.89)</td></tr>
+<td headers="**Effect of temperature variability** stub_1_5 low_n" class="gt_row gt_right">35</td>
+<td headers="**Effect of temperature variability** stub_1_5 low_b" class="gt_row gt_right">-1.11 (-2.05, -0.13)</td>
+<td headers="**Effect of temperature variability** stub_1_5 med_n" class="gt_row gt_right">36</td>
+<td headers="**Effect of temperature variability** stub_1_5 med_b" class="gt_row gt_right">-2.06 (-2.97, -1.15)</td>
+<td headers="**Effect of temperature variability** stub_1_5 high_n" class="gt_row gt_right">35</td>
+<td headers="**Effect of temperature variability** stub_1_5 high_b" class="gt_row gt_right">0.08 (-0.7, 0.89)</td></tr>
     <tr><th id="stub_1_6" scope="row" class="gt_row gt_left gt_stub">Adjusted<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span></th>
-<td headers="**Effect of temperature IQR** stub_1_6 low_n" class="gt_row gt_right">35</td>
-<td headers="**Effect of temperature IQR** stub_1_6 low_b" class="gt_row gt_right">-1.35 (-2.77, 0.14)</td>
-<td headers="**Effect of temperature IQR** stub_1_6 med_n" class="gt_row gt_right">36</td>
-<td headers="**Effect of temperature IQR** stub_1_6 med_b" class="gt_row gt_right">-1.8 (-2.78, -0.75)</td>
-<td headers="**Effect of temperature IQR** stub_1_6 high_n" class="gt_row gt_right">35</td>
-<td headers="**Effect of temperature IQR** stub_1_6 high_b" class="gt_row gt_right">-0.01 (-1.25, 1.28)</td></tr>
+<td headers="**Effect of temperature variability** stub_1_6 low_n" class="gt_row gt_right">35</td>
+<td headers="**Effect of temperature variability** stub_1_6 low_b" class="gt_row gt_right">-1.35 (-2.77, 0.14)</td>
+<td headers="**Effect of temperature variability** stub_1_6 med_n" class="gt_row gt_right">36</td>
+<td headers="**Effect of temperature variability** stub_1_6 med_b" class="gt_row gt_right">-1.8 (-2.78, -0.75)</td>
+<td headers="**Effect of temperature variability** stub_1_6 high_n" class="gt_row gt_right">35</td>
+<td headers="**Effect of temperature variability** stub_1_6 high_b" class="gt_row gt_right">-0.01 (-1.25, 1.28)</td></tr>
   </tbody>
   
   <tfoot class="gt_footnotes">
@@ -542,13 +542,13 @@
       <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>1</sup></span> Estimated β (95% CI) from stratified linear mixed models in which temperature is the explanatory variable of interest, nestling mass is the outcome of interest, and nest ID was included as a random intercept. Adjusted models include hatch date and number of nestlings in the nest. Continuous predictors are z-score standardized.</td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>2</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted minimum temperature models. Low parental feeding model: Marginal R<sup>2</sup> = 0.3, Conditional R<sup>2</sup> = 0.87; Medium parental feeding model: Marginal R<sup>2</sup> = 0.52, Conditional R<sup>2</sup> = 0.83; High parental feeding model: Marginal R<sup>2</sup> = 0.1, Conditional R<sup>2</sup> = 0.62</span></td>
+      <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>2</sup></span> <span class='gt_from_md'>R-squared for adjusted minimum temperature models. Low parental feeding model: Marginal R-squared = 0.3, Conditional R-squared = 0.87; Medium parental feeding model: Marginal R-squared = 0.52, Conditional R-squared = 0.83; High parental feeding model: Marginal R-squared = 0.1, Conditional R-squared = 0.62</span></td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>3</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted maximum temperature models. Low parental feeding model: Marginal R<sup>2</sup> = 0.2, Conditional R<sup>2</sup> = 0.87; Medium parental feeding model: Marginal R<sup>2</sup> = 0.46, Conditional R<sup>2</sup> = 0.84; High parental feeding model: Marginal R<sup>2</sup> = 0.07, Conditional R<sup>2</sup> = 0.63</span></td>
+      <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>3</sup></span> <span class='gt_from_md'>R-squared for adjusted maximum temperature models. Low parental feeding model: Marginal R-squared = 0.2, Conditional R-squared = 0.87; Medium parental feeding model: Marginal R-squared = 0.46, Conditional R-squared = 0.84; High parental feeding model: Marginal R-squared = 0.07, Conditional R-squared = 0.63</span></td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted temperature IQR models. Low parental feeding model: Marginal R<sup>2</sup> = 0.27, Conditional R<sup>2</sup> = 0.87; Medium parental feeding model: Marginal R<sup>2</sup> = 0.6, Conditional R<sup>2</sup> = 0.82; High parental feeding model: Marginal R<sup>2</sup> = 0.07, Conditional R<sup>2</sup> = 0.63</span></td>
+      <td class="gt_footnote" colspan="7"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span> <span class='gt_from_md'>R-squared for adjusted temperature variability models. Low parental feeding model: Marginal R-squared = 0.27, Conditional R-squared = 0.87; Medium parental feeding model: Marginal R-squared = 0.6, Conditional R-squared = 0.82; High parental feeding model: Marginal R-squared = 0.07, Conditional R-squared = 0.63</span></td>
     </tr>
   </tfoot>
 </table>
