--- a/Output/devel_mod_table.html
+++ b/Output/devel_mod_table.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="krlntebhgg" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#krlntebhgg table {
+<div id="tsxfxidaze" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#tsxfxidaze table {
   font-family: Arial, system-ui, 'Segoe UI', Roboto, Helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#krlntebhgg thead, #krlntebhgg tbody, #krlntebhgg tfoot, #krlntebhgg tr, #krlntebhgg td, #krlntebhgg th {
+#tsxfxidaze thead, #tsxfxidaze tbody, #tsxfxidaze tfoot, #tsxfxidaze tr, #tsxfxidaze td, #tsxfxidaze th {
   border-style: none;
 }
 
-#krlntebhgg p {
+#tsxfxidaze p {
   margin: 0;
   padding: 0;
 }
 
-#krlntebhgg .gt_table {
+#tsxfxidaze .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_caption {
+#tsxfxidaze .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#krlntebhgg .gt_title {
+#tsxfxidaze .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#krlntebhgg .gt_subtitle {
+#tsxfxidaze .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#krlntebhgg .gt_heading {
+#tsxfxidaze .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_bottom_border {
+#tsxfxidaze .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_col_headings {
+#tsxfxidaze .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_col_heading {
+#tsxfxidaze .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#krlntebhgg .gt_column_spanner_outer {
+#tsxfxidaze .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#krlntebhgg .gt_column_spanner_outer:first-child {
+#tsxfxidaze .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#krlntebhgg .gt_column_spanner_outer:last-child {
+#tsxfxidaze .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#krlntebhgg .gt_column_spanner {
+#tsxfxidaze .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#krlntebhgg .gt_spanner_row {
+#tsxfxidaze .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#krlntebhgg .gt_group_heading {
+#tsxfxidaze .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#krlntebhgg .gt_empty_group_heading {
+#tsxfxidaze .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#krlntebhgg .gt_from_md > :first-child {
+#tsxfxidaze .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#krlntebhgg .gt_from_md > :last-child {
+#tsxfxidaze .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#krlntebhgg .gt_row {
+#tsxfxidaze .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#krlntebhgg .gt_stub {
+#tsxfxidaze .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#krlntebhgg .gt_stub_row_group {
+#tsxfxidaze .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#krlntebhgg .gt_row_group_first td {
+#tsxfxidaze .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#krlntebhgg .gt_row_group_first th {
+#tsxfxidaze .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#krlntebhgg .gt_summary_row {
+#tsxfxidaze .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#krlntebhgg .gt_first_summary_row {
+#tsxfxidaze .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_first_summary_row.thick {
+#tsxfxidaze .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#krlntebhgg .gt_last_summary_row {
+#tsxfxidaze .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_grand_summary_row {
+#tsxfxidaze .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#krlntebhgg .gt_first_grand_summary_row {
+#tsxfxidaze .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_last_grand_summary_row_top {
+#tsxfxidaze .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_striped {
+#tsxfxidaze .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#krlntebhgg .gt_table_body {
+#tsxfxidaze .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_footnotes {
+#tsxfxidaze .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_footnote {
+#tsxfxidaze .gt_footnote {
   margin: 0px;
   font-size: 10px;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#krlntebhgg .gt_sourcenotes {
+#tsxfxidaze .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#krlntebhgg .gt_sourcenote {
+#tsxfxidaze .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,79 +387,79 @@
   padding-right: 5px;
 }
 
-#krlntebhgg .gt_left {
+#tsxfxidaze .gt_left {
   text-align: left;
 }
 
-#krlntebhgg .gt_center {
+#tsxfxidaze .gt_center {
   text-align: center;
 }
 
-#krlntebhgg .gt_right {
+#tsxfxidaze .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#krlntebhgg .gt_font_normal {
+#tsxfxidaze .gt_font_normal {
   font-weight: normal;
 }
 
-#krlntebhgg .gt_font_bold {
+#tsxfxidaze .gt_font_bold {
   font-weight: bold;
 }
 
-#krlntebhgg .gt_font_italic {
+#tsxfxidaze .gt_font_italic {
   font-style: italic;
 }
 
-#krlntebhgg .gt_super {
+#tsxfxidaze .gt_super {
   font-size: 65%;
 }
 
-#krlntebhgg .gt_footnote_marks {
+#tsxfxidaze .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#krlntebhgg .gt_asterisk {
+#tsxfxidaze .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#krlntebhgg .gt_indent_1 {
+#tsxfxidaze .gt_indent_1 {
   text-indent: 5px;
 }
 
-#krlntebhgg .gt_indent_2 {
+#tsxfxidaze .gt_indent_2 {
   text-indent: 10px;
 }
 
-#krlntebhgg .gt_indent_3 {
+#tsxfxidaze .gt_indent_3 {
   text-indent: 15px;
 }
 
-#krlntebhgg .gt_indent_4 {
+#tsxfxidaze .gt_indent_4 {
   text-indent: 20px;
 }
 
-#krlntebhgg .gt_indent_5 {
+#tsxfxidaze .gt_indent_5 {
   text-indent: 25px;
 }
 
-#krlntebhgg .katex-display {
+#tsxfxidaze .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#krlntebhgg div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#tsxfxidaze div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
   <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
   <thead>
     <tr class="gt_heading">
-      <td colspan="8" class="gt_heading gt_title gt_font_normal gt_bottom_border" style><span class='gt_from_md'><strong>Supplemental Table 2.</strong> Associations of three temperature variables before and/or after thermoregulatory independence (defined as occurring six days post-hatch) with nestling mass.</span></td>
+      <td colspan="8" class="gt_heading gt_title gt_font_normal gt_bottom_border" style><span class='gt_from_md'><strong>Supplemental Table 3.</strong> Associations of three temperature variables before and/or after thermoregulatory independence (defined as occurring six days post-hatch) with nestling mass. Temperature variability is defined as the interquartile range.</span></td>
     </tr>
     
     <tr class="gt_col_headings gt_spanner_row">
@@ -534,24 +534,24 @@
 <td headers="**Effect of maximum temperature** stub_1_4 both_bef_b" class="gt_row gt_right">-0.25 (-0.93, 0.38)</td>
 <td headers="**Effect of maximum temperature** stub_1_4 both_aft_b" class="gt_row gt_right">-1 (-1.7, -0.29)</td></tr>
     <tr class="gt_group_heading_row">
-      <th colspan="8" class="gt_group_heading" scope="colgroup" id="&lt;span class='gt_from_md'&gt;&lt;strong&gt;Effect of temperature IQR&lt;/strong&gt;&lt;/span&gt;"><span class='gt_from_md'><strong>Effect of temperature IQR</strong></span></th>
+      <th colspan="8" class="gt_group_heading" scope="colgroup" id="&lt;span class='gt_from_md'&gt;&lt;strong&gt;Effect of temperature variability&lt;/strong&gt;&lt;/span&gt;"><span class='gt_from_md'><strong>Effect of temperature variability</strong></span></th>
     </tr>
     <tr class="gt_row_group_first"><th id="stub_1_5" scope="row" class="gt_row gt_left gt_stub">Unadjusted</th>
-<td headers="**Effect of temperature IQR** stub_1_5 before_n" class="gt_row gt_right">106</td>
-<td headers="**Effect of temperature IQR** stub_1_5 before_b" class="gt_row gt_right">-1.32 (-1.9, -0.78)</td>
-<td headers="**Effect of temperature IQR** stub_1_5 after_n" class="gt_row gt_right">106</td>
-<td headers="**Effect of temperature IQR** stub_1_5 after_b" class="gt_row gt_right">-1.39 (-1.99, -0.85)</td>
-<td headers="**Effect of temperature IQR** stub_1_5 both_n" class="gt_row gt_right">106</td>
-<td headers="**Effect of temperature IQR** stub_1_5 both_bef_b" class="gt_row gt_right">-0.62 (-1.63, 0.39)</td>
-<td headers="**Effect of temperature IQR** stub_1_5 both_aft_b" class="gt_row gt_right">-0.87 (-1.91, 0.16)</td></tr>
+<td headers="**Effect of temperature variability** stub_1_5 before_n" class="gt_row gt_right">106</td>
+<td headers="**Effect of temperature variability** stub_1_5 before_b" class="gt_row gt_right">-1.32 (-1.9, -0.78)</td>
+<td headers="**Effect of temperature variability** stub_1_5 after_n" class="gt_row gt_right">106</td>
+<td headers="**Effect of temperature variability** stub_1_5 after_b" class="gt_row gt_right">-1.39 (-1.99, -0.85)</td>
+<td headers="**Effect of temperature variability** stub_1_5 both_n" class="gt_row gt_right">106</td>
+<td headers="**Effect of temperature variability** stub_1_5 both_bef_b" class="gt_row gt_right">-0.62 (-1.63, 0.39)</td>
+<td headers="**Effect of temperature variability** stub_1_5 both_aft_b" class="gt_row gt_right">-0.87 (-1.91, 0.16)</td></tr>
     <tr><th id="stub_1_6" scope="row" class="gt_row gt_left gt_stub">Adjusted<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span></th>
-<td headers="**Effect of temperature IQR** stub_1_6 before_n" class="gt_row gt_right">106</td>
-<td headers="**Effect of temperature IQR** stub_1_6 before_b" class="gt_row gt_right">-1.41 (-2.07, -0.77)</td>
-<td headers="**Effect of temperature IQR** stub_1_6 after_n" class="gt_row gt_right">106</td>
-<td headers="**Effect of temperature IQR** stub_1_6 after_b" class="gt_row gt_right">-1.33 (-1.95, -0.7)</td>
-<td headers="**Effect of temperature IQR** stub_1_6 both_n" class="gt_row gt_right">106</td>
-<td headers="**Effect of temperature IQR** stub_1_6 both_bef_b" class="gt_row gt_right">-0.82 (-1.82, 0.2)</td>
-<td headers="**Effect of temperature IQR** stub_1_6 both_aft_b" class="gt_row gt_right">-0.73 (-1.72, 0.23)</td></tr>
+<td headers="**Effect of temperature variability** stub_1_6 before_n" class="gt_row gt_right">106</td>
+<td headers="**Effect of temperature variability** stub_1_6 before_b" class="gt_row gt_right">-1.41 (-2.07, -0.77)</td>
+<td headers="**Effect of temperature variability** stub_1_6 after_n" class="gt_row gt_right">106</td>
+<td headers="**Effect of temperature variability** stub_1_6 after_b" class="gt_row gt_right">-1.33 (-1.95, -0.7)</td>
+<td headers="**Effect of temperature variability** stub_1_6 both_n" class="gt_row gt_right">106</td>
+<td headers="**Effect of temperature variability** stub_1_6 both_bef_b" class="gt_row gt_right">-0.82 (-1.82, 0.2)</td>
+<td headers="**Effect of temperature variability** stub_1_6 both_aft_b" class="gt_row gt_right">-0.73 (-1.72, 0.23)</td></tr>
   </tbody>
   
   <tfoot class="gt_footnotes">
@@ -559,13 +559,13 @@
       <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>1</sup></span> Estimated β (95% CI) from straified linear mixed models in which temperature before and/or after thermoregulatory independence are the explanatory variables of interest, nestling mass is the outcome of interest, and nest ID was included as a random intercept. Adjusted models include hatch date and number of nestlings in the nest. Continuous predictors as z-score standardized.</td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>2</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted minimum temperature models. Before model: Marginal R<sup>2</sup> = 0.23, Conditional R<sup>2</sup> = 0.82; After model: Marginal R<sup>2</sup> = 0.05, Conditional R<sup>2</sup> = 0.82; Both model: Marginal R<sup>2</sup> = 0.23, Conditional R<sup>2</sup> = 0.82</span></td>
+      <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>2</sup></span> <span class='gt_from_md'>R-squared for adjusted minimum temperature models. Before model: Marginal R-squared = 0.23, Conditional R-squared = 0.82; After model: Marginal R-squared = 0.05, Conditional R-squared = 0.82; Both model: Marginal R-squared = 0.23, Conditional R-squared = 0.82</span></td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>3</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted minimum temperature models. Before model: Marginal R<sup>2</sup> = 0.14, Conditional R<sup>2</sup> = 0.81; After model: Marginal R<sup>2</sup> = 0.25, Conditional R<sup>2</sup> = 0.82; Both model: Marginal R<sup>2</sup> = 0.27, Conditional R<sup>2</sup> = 0.81</span></td>
+      <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>3</sup></span> <span class='gt_from_md'>R-squared for adjusted maximum temperature models. Before model: Marginal R-squared = 0.14, Conditional R-squared = 0.81; After model: Marginal R-squared = 0.25, Conditional R-squared = 0.82; Both model: Marginal R-squared = 0.27, Conditional R-squared = 0.81</span></td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted minimum temperature models. Before model: Marginal R<sup>2</sup> = 0.34, Conditional R<sup>2</sup> = 0.81; After model: Marginal R<sup>2</sup> = 0.37, Conditional R<sup>2</sup> = 0.81; Both model: Marginal R<sup>2</sup> = 0.38, Conditional R<sup>2</sup> = 0.81</span></td>
+      <td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span> <span class='gt_from_md'>R-squared for adjusted temperature variability models. Before model: Marginal R-squared = 0.34, Conditional R-squared = 0.81; After model: Marginal R-squared = 0.37, Conditional R-squared = 0.81; Both model: Marginal R-squared = 0.38, Conditional R-squared = 0.81</span></td>
     </tr>
   </tfoot>
 </table>
