--- a/Output/size_adjusted_strat.html
+++ b/Output/size_adjusted_strat.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="nuygwwhech" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#nuygwwhech table {
+<div id="hdafidiypr" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#hdafidiypr table {
   font-family: Arial, system-ui, 'Segoe UI', Roboto, Helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#nuygwwhech thead, #nuygwwhech tbody, #nuygwwhech tfoot, #nuygwwhech tr, #nuygwwhech td, #nuygwwhech th {
+#hdafidiypr thead, #hdafidiypr tbody, #hdafidiypr tfoot, #hdafidiypr tr, #hdafidiypr td, #hdafidiypr th {
   border-style: none;
 }
 
-#nuygwwhech p {
+#hdafidiypr p {
   margin: 0;
   padding: 0;
 }
 
-#nuygwwhech .gt_table {
+#hdafidiypr .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_caption {
+#hdafidiypr .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#nuygwwhech .gt_title {
+#hdafidiypr .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#nuygwwhech .gt_subtitle {
+#hdafidiypr .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#nuygwwhech .gt_heading {
+#hdafidiypr .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_bottom_border {
+#hdafidiypr .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_col_headings {
+#hdafidiypr .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_col_heading {
+#hdafidiypr .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#nuygwwhech .gt_column_spanner_outer {
+#hdafidiypr .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#nuygwwhech .gt_column_spanner_outer:first-child {
+#hdafidiypr .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#nuygwwhech .gt_column_spanner_outer:last-child {
+#hdafidiypr .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#nuygwwhech .gt_column_spanner {
+#hdafidiypr .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#nuygwwhech .gt_spanner_row {
+#hdafidiypr .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#nuygwwhech .gt_group_heading {
+#hdafidiypr .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#nuygwwhech .gt_empty_group_heading {
+#hdafidiypr .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#nuygwwhech .gt_from_md > :first-child {
+#hdafidiypr .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#nuygwwhech .gt_from_md > :last-child {
+#hdafidiypr .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#nuygwwhech .gt_row {
+#hdafidiypr .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#nuygwwhech .gt_stub {
+#hdafidiypr .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#nuygwwhech .gt_stub_row_group {
+#hdafidiypr .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#nuygwwhech .gt_row_group_first td {
+#hdafidiypr .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#nuygwwhech .gt_row_group_first th {
+#hdafidiypr .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#nuygwwhech .gt_summary_row {
+#hdafidiypr .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#nuygwwhech .gt_first_summary_row {
+#hdafidiypr .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_first_summary_row.thick {
+#hdafidiypr .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#nuygwwhech .gt_last_summary_row {
+#hdafidiypr .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_grand_summary_row {
+#hdafidiypr .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#nuygwwhech .gt_first_grand_summary_row {
+#hdafidiypr .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_last_grand_summary_row_top {
+#hdafidiypr .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_striped {
+#hdafidiypr .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#nuygwwhech .gt_table_body {
+#hdafidiypr .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_footnotes {
+#hdafidiypr .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_footnote {
+#hdafidiypr .gt_footnote {
   margin: 0px;
   font-size: 10px;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#nuygwwhech .gt_sourcenotes {
+#hdafidiypr .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#nuygwwhech .gt_sourcenote {
+#hdafidiypr .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,79 +387,79 @@
   padding-right: 5px;
 }
 
-#nuygwwhech .gt_left {
+#hdafidiypr .gt_left {
   text-align: left;
 }
 
-#nuygwwhech .gt_center {
+#hdafidiypr .gt_center {
   text-align: center;
 }
 
-#nuygwwhech .gt_right {
+#hdafidiypr .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#nuygwwhech .gt_font_normal {
+#hdafidiypr .gt_font_normal {
   font-weight: normal;
 }
 
-#nuygwwhech .gt_font_bold {
+#hdafidiypr .gt_font_bold {
   font-weight: bold;
 }
 
-#nuygwwhech .gt_font_italic {
+#hdafidiypr .gt_font_italic {
   font-style: italic;
 }
 
-#nuygwwhech .gt_super {
+#hdafidiypr .gt_super {
   font-size: 65%;
 }
 
-#nuygwwhech .gt_footnote_marks {
+#hdafidiypr .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#nuygwwhech .gt_asterisk {
+#hdafidiypr .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#nuygwwhech .gt_indent_1 {
+#hdafidiypr .gt_indent_1 {
   text-indent: 5px;
 }
 
-#nuygwwhech .gt_indent_2 {
+#hdafidiypr .gt_indent_2 {
   text-indent: 10px;
 }
 
-#nuygwwhech .gt_indent_3 {
+#hdafidiypr .gt_indent_3 {
   text-indent: 15px;
 }
 
-#nuygwwhech .gt_indent_4 {
+#hdafidiypr .gt_indent_4 {
   text-indent: 20px;
 }
 
-#nuygwwhech .gt_indent_5 {
+#hdafidiypr .gt_indent_5 {
   text-indent: 25px;
 }
 
-#nuygwwhech .katex-display {
+#hdafidiypr .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#nuygwwhech div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#hdafidiypr div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
   <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
   <thead>
     <tr class="gt_heading">
-      <td colspan="5" class="gt_heading gt_title gt_font_normal gt_bottom_border" style><span class='gt_from_md'><strong>Supplemental Table 3.</strong> Associations of nestling mass and temperature, assessed in separate models stratified by relative nestling size at mid development measure (smallest vs. other).</span></td>
+      <td colspan="5" class="gt_heading gt_title gt_font_normal gt_bottom_border" style><span class='gt_from_md'><strong>Supplemental Table 4.</strong> Associations of nestling mass and temperature, assessed in separate models stratified by relative nestling size at mid development measure (smallest vs. other). Temperature variability is defined as the interquartile range.</span></td>
     </tr>
     
     <tr class="gt_col_headings gt_spanner_row">
@@ -506,18 +506,18 @@
 <td headers="**Effect of maximum temperature** stub_1_4 big_n" class="gt_row gt_right">72</td>
 <td headers="**Effect of maximum temperature** stub_1_4 big_b" class="gt_row gt_right">-0.85 (-1.47, -0.27)</td></tr>
     <tr class="gt_group_heading_row">
-      <th colspan="5" class="gt_group_heading" scope="colgroup" id="&lt;span class='gt_from_md'&gt;&lt;strong&gt;Effect of temperature IQR&lt;/strong&gt;&lt;/span&gt;"><span class='gt_from_md'><strong>Effect of temperature IQR</strong></span></th>
+      <th colspan="5" class="gt_group_heading" scope="colgroup" id="&lt;span class='gt_from_md'&gt;&lt;strong&gt;Effect of temperature variability&lt;/strong&gt;&lt;/span&gt;"><span class='gt_from_md'><strong>Effect of temperature variability</strong></span></th>
     </tr>
     <tr class="gt_row_group_first"><th id="stub_1_5" scope="row" class="gt_row gt_left gt_stub">Unadjusted</th>
-<td headers="**Effect of temperature IQR** stub_1_5 small_n" class="gt_row gt_right">31</td>
-<td headers="**Effect of temperature IQR** stub_1_5 small_b" class="gt_row gt_right">-1.65 (-2.55, -0.78)</td>
-<td headers="**Effect of temperature IQR** stub_1_5 big_n" class="gt_row gt_right">72</td>
-<td headers="**Effect of temperature IQR** stub_1_5 big_b" class="gt_row gt_right">-1.32 (-1.86, -0.81)</td></tr>
+<td headers="**Effect of temperature variability** stub_1_5 small_n" class="gt_row gt_right">31</td>
+<td headers="**Effect of temperature variability** stub_1_5 small_b" class="gt_row gt_right">-1.65 (-2.55, -0.78)</td>
+<td headers="**Effect of temperature variability** stub_1_5 big_n" class="gt_row gt_right">72</td>
+<td headers="**Effect of temperature variability** stub_1_5 big_b" class="gt_row gt_right">-1.32 (-1.86, -0.81)</td></tr>
     <tr><th id="stub_1_6" scope="row" class="gt_row gt_left gt_stub">Adjusted<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span></th>
-<td headers="**Effect of temperature IQR** stub_1_6 small_n" class="gt_row gt_right">31</td>
-<td headers="**Effect of temperature IQR** stub_1_6 small_b" class="gt_row gt_right">-1.95 (-2.98, -0.92)</td>
-<td headers="**Effect of temperature IQR** stub_1_6 big_n" class="gt_row gt_right">72</td>
-<td headers="**Effect of temperature IQR** stub_1_6 big_b" class="gt_row gt_right">-1.5 (-2.15, -0.89)</td></tr>
+<td headers="**Effect of temperature variability** stub_1_6 small_n" class="gt_row gt_right">31</td>
+<td headers="**Effect of temperature variability** stub_1_6 small_b" class="gt_row gt_right">-1.95 (-2.98, -0.92)</td>
+<td headers="**Effect of temperature variability** stub_1_6 big_n" class="gt_row gt_right">72</td>
+<td headers="**Effect of temperature variability** stub_1_6 big_b" class="gt_row gt_right">-1.5 (-2.15, -0.89)</td></tr>
   </tbody>
   
   <tfoot class="gt_footnotes">
@@ -525,13 +525,13 @@
       <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>1</sup></span> Estimated β (95% CI) from stratified linear mixed models in which temperature is the explanatory variable of interest, nestling mass is the outcome of interest, and nest ID was included as a random intercept. Adjusted models include hatch date and number of nestlings in the nest. Continuous predictors are z-score standardized.</td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>2</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted minimum temperature models. Small size model: Marginal R<sup>2</sup> = 0.34, Conditional R<sup>2</sup> = 0.91; Other size model: Marginal R<sup>2</sup> = 0.33, Conditional R<sup>2</sup> = 0.85</span></td>
+      <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>2</sup></span> <span class='gt_from_md'>R-squared for adjusted minimum temperature models. Small size model: Marginal R-squared = 0.34, Conditional R-squared = 0.91; Other size model: Marginal R-squared = 0.33, Conditional R-squared = 0.85</span></td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>3</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted maximum temperature models. Small size model: Marginal R<sup>2</sup> = 0.37, Conditional R<sup>2</sup> = 0.92; Other size model: Marginal R<sup>2</sup> = 0.32, Conditional R<sup>2</sup> = 0.84</span></td>
+      <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>3</sup></span> <span class='gt_from_md'>R-squared for adjusted maximum temperature models. Small size model: Marginal R-squared = 0.37, Conditional R-squared = 0.92; Other size model: Marginal R-squared = 0.32, Conditional R-squared = 0.84</span></td>
     </tr>
     <tr>
-      <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span> <span class='gt_from_md'>R<sup>2</sup> for adjusted temperature IQR models. Small size model: Marginal R<sup>2</sup> = 0.47, Conditional R<sup>2</sup> = 0.91; Other size model: Marginal R<sup>2</sup> = 0.49, Conditional R<sup>2</sup> = 0.84</span></td>
+      <td class="gt_footnote" colspan="5"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;"><sup>4</sup></span> <span class='gt_from_md'>R-squared for adjusted temperature variability models. Small size model: Marginal R-squared = 0.47, Conditional R-squared = 0.91; Other size model: Marginal R-squared = 0.49, Conditional R-squared = 0.84</span></td>
     </tr>
   </tfoot>
 </table>
